--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="xposedscope">
+        <item>android</item>
+        <item>com.android.systemui</item>
         <item>com.miui.gallery</item>
     </string-array>
 </resources>
